--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "stripe": "^8.143.0"
+    "stripe": "^8.143.0",
+    "uuidv4": "^6.2.7"
   }
 }
