--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^7.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
